# reefscan

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: bench.py  config.py  eval.py  jobs.py  loadtest.py  main.py  observability.py  optimize_sam2.py  optimize_sam2_decode.py  persistence.py  requirements.txt  schemas.py  vlm_benchmark.py
backend/data/: __init__.py  eda.py  label_mapping.py  patch_dataset.py  split.py  transforms.py
backend/db/: schema.sql  seed_demo.sql
backend/inference/: __init__.py  classifier.py  enhancer.py  frame_extractor.py  pipeline.py  segmenter.py
backend/models/: retrain_trigger.py  train_dinov2.py
backend/tests/: test_api.py  test_observability.py
deploy/: Dockerfile  README_SPACE.md
docs/: DESIGN_BRIEF.md  MODEL_CARD.md  V2_SPEC.md
docs/eval/: bench.json  conformal.json  loadtest.json  metrics.json  sam2_opt.json  sam2_opt_decode.json  vllm_serving_sweep.json  vlm_benchmark.json  vlm_benchmark_Qwen_Qwen2.5-VL-7B-Instruct.json  vlm_preds_gpt-4o.jsonl
edge/: PORTFOLIO.md  README.md  RESULTS.md  __init__.py  data.py  harness.py  model.py  plot_pareto.py  plot_qat.py  profile_trt.py  requirements.txt  results.csv  run_baseline.py  run_ft_control.py  run_qat.py  run_rung2.py  run_rung3.py  run_rung3b.py  run_rung4.py  run_sweep.py
edge/colab/: reefscan_edge 2.ipynb  reefscan_edge.ipynb
edge/cpp_server/: .gitignore  CLAUDE.md  CMakeLists.txt  DECISIONS.md  README.md
edge/cpp_server/bench/: bench_client.cpp  bench_client.py  parity_check.py
edge/cpp_server/docs/: serving_curve.json
edge/cpp_server/include/: batch_queue.h  preproc_kernel.h  trt_engine.h
edge/cpp_server/kernels/: preproc_kernel.cu  test_kernel.cpp
edge/cpp_server/src/: batch_queue.cpp  main_phase0.cpp  main_phase1.cpp  server.cpp  trt_engine.cpp
edge/cpp_server/tools/: README.md  run_all_gates.sh  run_bench.sh  runpod.py
edge/docs/: qat_control.json  qat_history.json  qat_speed_a6000.json  serving_curve.json
edge/serving/: README.md  RUNPOD.md  docker-compose.yml
edge/serving/docs/: perf_analyzer.csv  triton_parity.json  triton_serving_curve.json
edge/serving/model_repository/reefscan_dinov2/: config.pbtxt
edge/serving/model_repository/reefscan_dinov2/1/: PLACE_ENGINE_HERE.md
edge/serving/tools/: README.md  parse_perf.py  run_triton_bench.sh  triton_client.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/review/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/tracker/: page.tsx
frontend/components/: Backdrop.tsx  LineChart.tsx  Nav.tsx  SegmentCard.tsx  SegmentOverlay.tsx  ThemeToggle.tsx  TimeSeriesChart.tsx  ui.tsx
frontend/lib/: api.ts  mock.ts  types.ts
notebooks/: 01_train_dinov2.ipynb  serving_B_cuda_kernel.ipynb  serving_CD_oneshot.ipynb  serving_CD_vllm.ipynb  serving_inference.ipynb
spike/: amg_sweep.py  feasibility_spike.py
